--- a/android-client/app/src/main/res/layout/activity_control.xml
+++ b/android-client/app/src/main/res/layout/activity_control.xml
@@ -252,4 +252,14 @@
         android:text="Gaz0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button11" />
+
+    <Button
+        android:id="@+id/buttonStartStocktaking"
+        android:layout_width="102dp"
+        android:layout_height="70dp"
+        android:onClick="startStocktakingClick"
+        android:text="Start Stocktaking"
+        android:textSize="10sp"
+        tools:layout_editor_absoluteX="174dp"
+        tools:layout_editor_absoluteY="112dp" />
 </android.support.constraint.ConstraintLayout>
